--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
             </div>
         </div>
 
+        <!-- Hecho por... -->
+        <div class="mt-8 text-center text-sm text-gray-500">
+            Hecho por Oswaldo Marquez H
+        </div>
+
     </main>
 
     <!-- Mensaje de confirmación de copia -->
