--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             transform: scale(1.05);
         }
 
+        .currency-btn.active:hover {
+            background-color: #10B981; /* Mantener el color verde en hover */
+        }
+
         #message-box {
             position: fixed;
             top: 20px;
@@ -69,7 +73,7 @@
 
     <main class="w-full h-full md:max-w-2xl mx-auto p-8 bg-gray-800 rounded-lg shadow-xl border border-gray-700 text-center flex flex-col justify-center">
         <h1 class="text-4xl font-bold text-green-400 mb-2">Hoy Dolarizado</h1>
-        <p class="text-gray-400 mb-6">Valores de un API de cambio global.</p>
+        <p class="text-gray-400 mb-6">Tasas Actualizadas del Banco Central de Venezuela</p>
         
         <!-- Panel de Selección de Tasa -->
         <div class="flex justify-center space-x-2 mb-6">
@@ -246,6 +250,9 @@
                 });
                 document.getElementById(`${currency.toLowerCase()}-btn`).classList.add('active');
                 currentCurrency = currency;
+
+                // Sincronizar el conversor
+                document.getElementById('currency-select').value = currency;
             }
         }
 
