--- a/index.html
+++ b/index.html
@@ -95,16 +95,6 @@
                 <p class="text-xl text-gray-300">Valor actual:</p>
                 <div class="flex items-center justify-center">
                     <p class="text-5xl font-bold text-green-400 mt-1 mr-2" id="currency-rate">Cargando...</p>
-                    <button id="copy-btn" class="text-gray-400 hover:text-green-400 focus:outline-none transition-colors mr-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-2M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2A2 2 0 0114 5m-5 8h4m-4 4h4" />
-                        </svg>
-                    </button>
-                    <button id="share-btn" class="text-gray-400 hover:text-green-400 focus:outline-none transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.476-.11-1.015-.312-1.664M8.684 13.342c-1.801 3.102-3.896 4.981-5.38 5.766A1.5 1.5 0 010 18.5a1.5 1.5 0 011.026-.142M8.684 13.342L12 19l4.316-5.658c.202-.404.312-.86.312-1.342 0-2.21-1.79-4-4-4s-4 1.79-4 4c0 .482.11.938.312 1.342zM12 19V6m0 0a2 2 0 100-4 2 2 0 000 4z" />
-                        </svg>
-                    </button>
                 </div>
             </div>
             
@@ -117,6 +107,21 @@
                 Actualizar
             </button>
         </div>
+        
+        <!-- Botones de Copiar y Compartir (NUEVA UBICACIÓN) -->
+        <div class="flex justify-center space-x-4 mb-4">
+            <button id="copy-btn" class="text-gray-400 hover:text-green-400 focus:outline-none transition-colors">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-2M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2A2 2 0 0114 5m-5 8h4m-4 4h4" />
+                </svg>
+            </button>
+            <button id="share-btn" class="text-gray-400 hover:text-green-400 focus:outline-none transition-colors">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.476-.11-1.015-.312-1.664M8.684 13.342c-1.801 3.102-3.896 4.981-5.38 5.766A1.5 1.5 0 010 18.5a1.5 1.5 0 011.026-.142M8.684 13.342L12 19l4.316-5.658c.202-.404.312-.86.312-1.342 0-2.21-1.79-4-4-4s-4 1.79-4 4c0 .482.11.938.312 1.342zM12 19V6m0 0a2 2 0 100-4 2 2 0 000 4z" />
+                </svg>
+            </button>
+        </div>
+
 
         <!-- Nuevo conversor con Gemini API -->
         <div class="mt-8 pt-6 border-t border-gray-700 text-left">
