--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 }
             } catch (error) {
                 console.error("Error en la API de Gemini:", error);
-                conversionExplanationDiv.textContent = 'Ocurrió un error al generar la explicación.';
+                conversionExplanationDiv.textContent = 'El conversor inteligente ha fallado, esto no afecta a la conversion real de Divisas.';
             } finally {
                 conversionLoading.classList.add('hidden');
             }
