--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
         }
 
         async function fetchAndSetRates() {
+            const refreshBtn = document.getElementById('refresh-btn');
+            refreshBtn.disabled = true;
+            refreshBtn.textContent = 'Actualizando...';
             try {
                 const response = await fetch('https://api.exchangerate-api.com/v4/latest/USD');
                 if (!response.ok) {
@@ -274,6 +277,9 @@
             } catch (error) {
                 console.error("Error al cargar la API:", error);
                 showMessage("Error de conexión. No se pudo obtener la tasa en línea.");
+            } finally {
+                refreshBtn.disabled = false;
+                refreshBtn.textContent = 'Actualizar';
             }
         }
 
@@ -290,9 +296,7 @@
             const rateInfo = rates[currency];
             if (rateInfo) {
                 document.getElementById('currency-rate').textContent = `${rateInfo.symbol} ${rateInfo.value}`;
-                document.getElementById('loading').classList.add('hidden');
-                document.getElementById('rate-display').classList.remove('hidden');
-
+                
                 // Actualizar el estado de los botones
                 document.querySelectorAll('.currency-btn').forEach(btn => {
                     btn.classList.remove('active');
@@ -392,12 +396,8 @@
         
         // Función para actualizar la tasa
         document.getElementById('refresh-btn').addEventListener('click', async () => {
-            const refreshBtn = document.getElementById('refresh-btn');
-            refreshBtn.disabled = true;
-            refreshBtn.textContent = 'Actualizando...';
+             // Llama a fetchAndSetRates() sin verificar el caché, forzando la actualización
             await fetchAndSetRates();
-            refreshBtn.disabled = false;
-            refreshBtn.textContent = 'Actualizar';
         });
 
         // Event listener para el nuevo botón de conversión
@@ -419,6 +419,7 @@
             const docSnap = await window.firebase.getDoc(rateDocRef);
             if (docSnap.exists()) {
                 const data = docSnap.data();
+                updateUIWithRates(data); // Actualiza la UI de inmediato
                 if (Date.now() - data.timestamp > CACHE_EXPIRY) {
                     await fetchAndSetRates();
                 }
