--- a/index.html
+++ b/index.html
@@ -135,6 +135,31 @@
         .conversion-toggle-btn:active {
             transform: scale(0.98);
         }
+
+        .delete-history-item {
+            background-color: #EF4444; /* red-500 */
+            color: white;
+            border-radius: 50%;
+            width: 1.5rem;
+            height: 1.5rem;
+            font-size: 0.8rem;
+            line-height: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: transform 0.2s ease;
+        }
+
+        .delete-history-item:hover {
+            background-color: #DC2626; /* red-600 */
+            transform: scale(1.1);
+        }
+
+        .history-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
     </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
@@ -166,7 +191,7 @@
                 <div class="flex items-center justify-center space-x-2">
                     <p class="text-5xl font-bold text-green-400 mt-1 mr-2" id="currency-rate">Cargando...</p>
                     <button id="copy-btn" class="text-gray-400 hover:text-green-400 focus:outline-none transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <svg xmlns="http://www.3d6e9021.com/images/copy_icon.svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-2M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2A2 2 0 0114 5m-5 8h4m-4 4h4" />
                         </svg>
                     </button>
@@ -175,7 +200,7 @@
             
             <!-- Aviso para la Tasa USDT -->
             <div id="usdt-notice" class="usdt-notice hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor">
+                <svg xmlns="http://www.3d6e9021.com/images/info_icon.svg" class="h-5 w-5 mr-2 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
                 </svg>
                 <span>El valor reflejado de la Tasa USDT es un promedio del mercado P2P en Venezuela. Este valor puede variar según la plataforma y las transacciones.</span>
@@ -201,8 +226,8 @@
             <!-- Botón para alternar la dirección de la conversión, ahora en su propia línea -->
             <div class="flex justify-center mb-4">
                 <button id="conversion-toggle-btn" class="conversion-toggle-btn w-full sm:w-1/2 flex items-center justify-center space-x-2 p-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
-                    <span id="toggle-text">Bolívares a Divisa</span>
-                    <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transform transition-transform duration-300" viewBox="0 0 20 20" fill="currentColor">
+                    <span id="toggle-text">Divisa a Bolívares</span>
+                    <svg id="toggle-icon" xmlns="http://www.3d6e9021.com/images/toggle_icon.svg" class="h-5 w-5 transform transition-transform duration-300 rotate-180" viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd" />
                     </svg>
                 </button>
@@ -250,7 +275,7 @@
     <script>
         let rates = {};
         let currentCurrency = 'USD';
-        let conversionDirection = 'bs-to-currency';
+        let conversionDirection = 'currency-to-bs'; // Ahora predeterminado a Divisa a Bolívares
         const HISTORY_KEY = 'conversionHistory';
         let msgTimeout;
 
@@ -415,34 +440,67 @@
                 historyList.innerHTML = '<p class="text-center text-gray-500">Aún no hay conversiones en tu historial.</p>';
                 clearBtn.classList.add('hidden');
             } else {
-                history.forEach(item => {
+                history.forEach((item, index) => {
                     const listItem = document.createElement('li');
-                    listItem.classList.add('bg-gray-700', 'p-3', 'rounded-lg');
+                    listItem.classList.add('bg-gray-700', 'p-3', 'rounded-lg', 'history-item');
                     listItem.innerHTML = `
-                        <p class="text-sm"><span class="font-bold">${item.amount} ${item.fromCurrency}</span> a <span class="text-green-400 font-bold">${item.result} ${item.toCurrency}</span></p>
-                        <p class="text-xs text-gray-500">${item.timestamp}</p>
+                        <div>
+                            <p class="text-sm"><span class="font-bold">${item.amount} ${item.fromCurrency}</span> a <span class="text-green-400 font-bold">${item.result} ${item.toCurrency}</span></p>
+                            <p class="text-xs text-gray-500">${item.timestamp}</p>
+                        </div>
+                        <button class="delete-history-item" data-index="${index}">
+                            &times;
+                        </button>
                     `;
                     historyList.appendChild(listItem);
                 });
                 clearBtn.classList.remove('hidden');
+
+                // Attach event listeners for the new delete buttons
+                document.querySelectorAll('.delete-history-item').forEach(button => {
+                    button.addEventListener('click', (event) => {
+                        const index = event.target.dataset.index;
+                        deleteHistoryItem(index);
+                    });
+                });
             }
+        }
+
+        // Elimina un solo elemento del historial
+        function deleteHistoryItem(index) {
+            let history = JSON.parse(localStorage.getItem(HISTORY_KEY)) || [];
+            history.splice(index, 1);
+            localStorage.setItem(HISTORY_KEY, JSON.stringify(history));
+            loadHistory();
+            showMessage("Conversión eliminada del historial.", 3000);
         }
 
         // Limpia el historial de conversiones
         function clearHistory() {
             localStorage.removeItem(HISTORY_KEY);
             loadHistory();
+            document.getElementById('conversion-result').classList.add('hidden');
             showMessage("Historial de conversiones limpiado.", 3000);
         }
 
         // Función para refrescar la página
         async function refreshPage() {
             const refreshBtn = document.getElementById('refresh-btn');
+            const loadingDiv = document.getElementById('loading');
+            const rateDisplayDiv = document.getElementById('rate-display');
+
+            // Muestra el estado de carga y deshabilita el botón
             refreshBtn.disabled = true;
             refreshBtn.textContent = 'Actualizando...';
+            loadingDiv.classList.remove('hidden');
+            rateDisplayDiv.classList.add('hidden');
 
+            // Llama a la función de inicialización para cargar las tasas
             await init();
 
+            // Oculta el estado de carga y vuelve a habilitar el botón
+            loadingDiv.classList.add('hidden');
+            rateDisplayDiv.classList.remove('hidden');
             refreshBtn.disabled = false;
             refreshBtn.textContent = 'Actualizar';
         }
@@ -533,6 +591,7 @@
             }
             
             loadHistory();
+            updateConversionInputPlaceholder(); // Asegura el placeholder correcto en el inicio
         }
 
         window.onload = () => {
