--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background-color: var(--bg-color);
+            background-color: var(--card-bg);
             color: var(--text-color);
-            display: flex;
-            justify-content: center;
-            align-items: center;
             min-height: 100vh;
-            padding: 1rem;
+            padding: 0; /* Remove body padding for full-screen effect */
             transition: background-color 0.3s ease, color 0.3s ease;
         }
         
@@ -161,7 +158,7 @@
 </head>
 <body class="theme-dark">
 
-    <main class="w-full max-w-lg p-6 md:p-8 bg-gray-800 rounded-2xl shadow-2xl border border-gray-700 text-center flex flex-col justify-center animate-fade-in-section">
+    <main class="w-full h-full min-h-screen p-6 md:p-8 text-center flex flex-col justify-center animate-fade-in-section">
         
         <div class="flex justify-between items-center w-full mb-4 relative">
             <!-- Icono y título de la aplicación -->
