--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
         </div>
     </div>
 
-    <main class="w-full h-full min-h-screen p-6 md:p-8 text-center flex flex-col justify-center animate-fade-in-section max-w-lg mx-auto">
+    <!-- INICIO DE LA MODIFICACIÓN DE ADAPTABILIDAD -->
+    <!-- Se agregaron clases: md:max-w-xl lg:max-w-2xl para que se vea más grande en pantallas de escritorio -->
+    <main class="w-full h-full min-h-screen p-6 md:p-8 text-center flex flex-col justify-center animate-fade-in-section max-w-lg md:max-w-xl lg:max-w-2xl mx-auto">
         <div class="flex items-center justify-center space-x-2 w-full mb-4">
             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="text-green-400">
                 <path d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM12 18.5C12 18.2239 11.7761 18 11.5 18H10.5C10.2239 18 10 17.7761 10 17.5V14.5C10 14.2239 10.2239 14 10.5 14H13.5C13.7761 14 14 13.7761 14 13.5V10.5C14 10.2239 13.7761 10 13.5 10H10.5C10.2239 10 10 9.77614 10 9.5V6.5C10 6.22386 10.2239 6 10.5 6H11.5C11.7761 6 12 5.77614 12 5.5V5.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -220,6 +222,7 @@
             </svg>
             <h1 class="text-3xl font-bold text-green-400">Tasa VE</h1>
         </div>
+        <!-- FIN DE LA MODIFICACIÓN DE ADAPTABILIDAD -->
         
         <p class="text-gray-400 mb-6">Tasas Actualizadas del Banco Central de Venezuela</p>
         
