--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="card p-4 rounded-lg mb-4 w-full">
                 <p class="text-xl text-gray-400">Valor actual:</p>
                 <div class="flex items-center justify-center space-x-2">
-                    <!-- Tasa mostrada con el formato modificado: punto decimal -->
+                    <!-- Tasa mostrada con el punto decimal -->
                     <p class="text-4xl sm:text-5xl font-bold text-green-400 mt-1 mr-2" id="currency-rate">Cargando...</p>
                     <button id="copy-btn" class="text-gray-400 hover:text-green-400 focus:outline-none transition-colors" title="Copiar Tasa">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -289,8 +289,14 @@
             </div>
 
             <div class="flex flex-col space-y-4 mb-4 items-center justify-center">
-                <!-- type="text" para aceptar + y - -->
-                <input type="text" id="amount-input" class="converter-input w-full p-3" placeholder="Cantidad (ej: 100+50-10)">
+                <!-- CAMBIO: Agregado inputmode="decimal" para abrir teclado numérico en móviles -->
+                <input 
+                    type="text" 
+                    id="amount-input" 
+                    class="converter-input w-full p-3" 
+                    placeholder="Cantidad (ej: 100+50-10)" 
+                    inputmode="decimal"
+                >
                 <select id="currency-select" class="converter-input w-full p-3">
                     <option value="USD">🇺🇸 Dólares (USD)</option>
                     <option value="EUR">🇪🇺 Euros (EUR)</option>
@@ -804,7 +810,7 @@
             }
 
             if (rateInfo) {
-                // *** CAMBIO CRUCIAL: Usamos 'en-US' para que el decimal sea el PUNTO (ej: 231.04) ***
+                // *** Usamos 'en-US' para que el decimal sea el PUNTO (ej: 231.04) ***
                 const formattedRate = rateInfo.value.toLocaleString('en-US', { 
                     minimumFractionDigits: 2, 
                     maximumFractionDigits: 2 
