--- a/index.html
+++ b/index.html
@@ -289,13 +289,12 @@
             </div>
 
             <div class="flex flex-col space-y-4 mb-4 items-center justify-center">
-                <!-- CAMBIO: Agregado inputmode="decimal" para abrir teclado numérico en móviles -->
+                <!-- CAMBIO REVERTIDO: Eliminado inputmode="decimal" -->
                 <input 
                     type="text" 
                     id="amount-input" 
                     class="converter-input w-full p-3" 
                     placeholder="Cantidad (ej: 100+50-10)" 
-                    inputmode="decimal"
                 >
                 <select id="currency-select" class="converter-input w-full p-3">
                     <option value="USD">🇺🇸 Dólares (USD)</option>
