--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 Limpiar Historial
             </button>
             <button id="refresh-page-btn" class="config-button">
-                Reiniciar App
+                Refrescar
             </button>
             <div class="text-center text-sm text-gray-500 pt-2">
                 Versión: <span id="app-version">3.0</span>
@@ -844,8 +844,8 @@
              const data = {
                  rates: {
                      // Las tasas son datos de ejemplo
-                     'USD': { value: 231.04, symbol: 'Bs', conversion: 231.04, displaySymbol: '$' }, 
-                     'EUR': { value: 267.63, symbol: 'Bs', conversion: 267.63, displaySymbol: '€' },
+                     'USD': { value: 241.57, symbol: 'Bs', conversion: 241.57, displaySymbol: '$' }, 
+                     'EUR': { value: 278.42, symbol: 'Bs', conversion: 278.42, displaySymbol: '€' },
                      'USDT': { value: 394.59, symbol: 'Bs', conversion: 394.59, displaySymbol: '₮' },
                  },
                  timestamp: Date.now() 
@@ -916,3 +916,4 @@
     </script>
 </body>
 </html>
+
